# learn-hatch

./: .gitignore  LICENSE  README.md  SIR_model_script.py  pyproject.toml
src/mikemcka_epi_models/: SEIR.py  SIR.py  __init__.py
