# file: pyproject.toml


# Build system configuration
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Project metadata
[project]
name = "mikemcka_epi_models"
dynamic = ["version"]

# A simple summary of the project
description = "My wonderful Python package"


# Full description of the project.
# Should be the path to your README file, relative to pyproject.toml
readme = "README.md"

# The Python version required by the project
requires-python = ">=3.8"

# The license of your project.
# Can be provided as a file or a text description.
# Discussed in the lesson on publishing

license = {text = "MIT"}


# Authors / maintainers
# Each entry can have a name and/or an email
authors = [
    {name = "Michael Mckay", email = "mikemcka97@gmail.com"},
]

# dependencies: Array of Strings
# A list of requirements for our package
dependencies = [
    "matplotlib",
]

# Project URLs
[project.urls]
homepage = "https://github.com/mikemcka/learn-hatch"
documentation = "https://github.com/mikemcka/learn-hatch"
repository = "https://github.com/mikemcka/learn-hatch"

# Hatch build configuration
[tool.hatch.build]
source = "src"

# Add entry points
[project.scripts]
epi_models = "mikemcka_epi_models.SIR:main"

[project.optional-dependencies]
test = [
    "pytest",
]

# Hatch versioning configuration
[tool.hatch.version]
source = "vcs"

# Version control system (VCS) versioning
[tool.hatch.version.vcs]
tag-pattern = "v*"  # Git tags starting with 'v' will be used for versioning
fallback-version = "0.0.0"

# Version file location for VCS
[tool.hatch.build.hooks.vcs]
version-file = "src/mikemcka_epi_models/_version.py"